# Arctan-Voice-Isolation-website

./: .env.example  .gitignore  .gitmodules  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/dub/: route.ts
app/api/files/[fileId]/: route.ts
app/api/transcribe/: route.ts
app/api/translate/: route.ts
app/api/upload/: route.ts
app/landing/: page.tsx
app/stream-demo/: page.tsx
components/: Dashboard.tsx  FileUpload.tsx  JobProgress.tsx  LanguageSelector.tsx  OutputModeSelector.tsx  ResultPreview.tsx  TranscriptEditor.tsx  VoiceSelector.tsx
components/ui/: button.tsx  select.tsx  textarea.tsx
configs/: pipeline.yaml
lib/: alignedDubbing.ts  audioTimeline.ts  deepgramAsr.ts  elevenlabs.ts  ffmpeg.ts  languages.ts  qwen.ts  qwenAsr.ts  qwenVoiceClone.ts  storage.ts  validation.ts
public/arctan-stream/: index.html
public/logos/: creed.avif  diverseline.avif  gdpr.avif  grssl.avif  ikarus.avif  soc2.avif
tests/: test_pipeline.py  test_web_api.py
translation_pipeline/: __init__.py  cli.py  config.py  runner.py
translation_pipeline/web/: __init__.py  __main__.py  app.py  jobs.py
ui/: index.html  package-lock.json  package.json
ui/src/: main.tsx  styles.css
