[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "funcineforge-translation-pipeline"
version = "0.1.0"
description = "CPU-first orchestration wrapper for FunCineForge translation and dubbing workflows."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116",
  "python-multipart>=0.0.20",
  "PyYAML>=6.0",
  "uvicorn>=0.35",
]

[tool.setuptools.packages.find]
include = ["translation_pipeline*"]
